using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;
internal class AnimationStrings
{
    internal static string isRunning = "isRunning";
    internal static string isOnWall = "IsOnWall";
    internal static string yVelocity = "yVelocity";
    internal static string playerJump = "playerJump";
    internal static string isOnCeiling = "IsOnCeiling";
    internal static string isGrounded = "isGrounded";
    internal static string canMove = "canMove";
    internal static string attack = "attack";
    internal static string lockVel = "lockVel";
    internal static string hit = "hit";
}